--- a/game-zone-futures.html
+++ b/game-zone-futures.html
@@ -1236,6 +1236,44 @@
           </div>
         </article>   
 
+            
+                                 <article class="card">
+          <div class="body">
+            <div class="text">
+              <h3>Lyric Gaps</h3>
+              <p>Play an appropriate song and show lyrics with some blanks; students listen and fill the missing words. Twist: blank only verbs, adjectives, words with a target sound, etc. Great for vocabulary and careful listening.</p>
+            </div>
+            <div class="art-col">
+              <div class="art-frame">
+                <img
+                  src="https://github.com/Outreach360-Inc/games/blob/main/lyric-gaps-icon.png?raw=true"
+                  alt="Lyric Gaps icon"
+                  loading="lazy" decoding="async">
+              </div>
+              <p style="color: #ff6729;" align="center"><strong>YOU WILL NEED TO CREATE YOUR OWN MATERIALS</strong></p>
+            </div>
+          </div>
+        </article>
+
+
+                <article class="card">
+          <div class="body">
+            <div class="text">
+              <h3>Grammar Karaoke</h3>
+              <p>Play an appropriate song. After listening, students rewrite the song, changing the tense(s). Then they sing or say it. Great for grammar and listening. </p>
+            </div>
+            <div class="art-col">
+              <div class="art-frame">
+                <img
+                  src="https://github.com/Outreach360-Inc/games/blob/main/grammar-karaoke-icon.png?raw=true"
+                  alt="Grammar Karaoke icon"
+                  loading="lazy" decoding="async">
+              </div>
+              <p style="color: #ff6729;" align="center"><strong>YOU WILL NEED TO FIND YOUR OWN MATERIALS</strong></p>
+            </div>
+          </div>
+        </article>
+
                   <article class="card">
           <div class="body">
             <div class="text">
@@ -1731,6 +1769,7 @@
 
 </body>
 </html>
+
 
 
 
