--- a/game-zone-futures.html
+++ b/game-zone-futures.html
@@ -1274,6 +1274,25 @@
           </div>
         </article>
 
+
+                                             <article class="card">
+          <div class="body">
+            <div class="text">
+              <h3>Song Theme Debate</h3>
+              <p>Play an appropriate song and show 3 theme options. Students pick the best theme and defend it with paraphrased evidence from the lyrics. Twist: counterclaim round—partner argues a different theme; gives a rebuttal. Great for theme/main idea, citing evidence, paraphrasing, and listening.</p>
+            </div>
+            <div class="art-col">
+              <div class="art-frame">
+                <img
+                  src="https://github.com/Outreach360-Inc/games/blob/main/song-theme-debate-icon.png?raw=true"
+                  alt="Song Theme Debate icon"
+                  loading="lazy" decoding="async">
+              </div>
+              <p style="color: #ff6729;" align="center"><strong>YOU WILL NEED TO CREATE YOUR OWN MATERIALS</strong></p>
+            </div>
+          </div>
+        </article>
+
                   <article class="card">
           <div class="body">
             <div class="text">
@@ -1769,6 +1788,7 @@
 
 </body>
 </html>
+
 
 
 
