--- a/game-zone-futures.html
+++ b/game-zone-futures.html
@@ -1123,6 +1123,23 @@
           </div>
         </article>
 
+                  <article class="card">
+          <div class="body">
+            <div class="text">
+              <h3>Mystery Guest</h3>
+              <p>One student pretends to be a celebrity, historical figure, or other known person. Others ask open-ended or closed-ended questions to guess who they are. Great for practicing questions and more!</p>
+            </div>
+            <div class="art-col">
+              <div class="art-frame">
+                <img
+                  src="https://github.com/Outreach360-Inc/games/blob/main/mystery-guest-icon.png?raw=true"
+                  alt="Mystery Guest icon"
+                  loading="lazy" decoding="async">
+              </div>
+              <p style="color: #ff6729;" align="center"><strong>THIS GAME DOES NOT REQUIRE ANY MATERIALS</strong></p>
+            </div>
+          </div>
+        </article>
 
       <article class="card">
           <div class="body">
@@ -1788,6 +1805,7 @@
 
 </body>
 </html>
+
 
 
 
