--- a/game-zone-discover.html
+++ b/game-zone-discover.html
@@ -803,20 +803,20 @@
         </article>
 
 
-      <article class="card">
+                              <article class="card">
           <div class="body">
             <div class="text">
-              <h3>Twenty Questions 2</h3>
-              <p>A classic guessing game that builds critical thinking, questioning skills, and vocabulary! Spin to give a student a mystery item or action. The others ask them yes/no questions to figure out what is—within 20 questions. Great for practicing questions, descriptions, and vocabulary!</p>
+              <h3>Mystery Guest</h3>
+              <p>One student pretends to be a celebrity, historical figure, or other known person. Others ask open-ended or closed-ended questions to guess who they are. Great for practicing questions and more!</p>
             </div>
             <div class="art-col">
               <div class="art-frame">
                 <img
-                  src="https://github.com/Outreach360-Inc/games/blob/main/20-questions2-icon.png?raw=true"
-                  alt="Twenty Questions 2 icon"
+                  src="https://github.com/Outreach360-Inc/games/blob/main/mystery-guest-icon.png?raw=true"
+                  alt="Mystery Guest icon"
                   loading="lazy" decoding="async">
               </div>
-              <a href="https://randomwordgenerator.com/charades.php" target="_blank"><button class="play-btn">PLAY</button></a>
+              <p style="color: #ff6729;" align="center"><strong>THIS GAME DOES NOT REQUIRE ANY MATERIALS</strong></p>
             </div>
           </div>
         </article>
@@ -839,7 +839,23 @@
           </div>
         </article>
 
-
+      <article class="card">
+          <div class="body">
+            <div class="text">
+              <h3>Twenty Questions 2</h3>
+              <p>A classic guessing game that builds critical thinking, questioning skills, and vocabulary! Spin to give a student a mystery item or action. The others ask them yes/no questions to figure out what is—within 20 questions. Great for practicing questions, descriptions, and vocabulary!</p>
+            </div>
+            <div class="art-col">
+              <div class="art-frame">
+                <img
+                  src="https://github.com/Outreach360-Inc/games/blob/main/20-questions2-icon.png?raw=true"
+                  alt="Twenty Questions 2 icon"
+                  loading="lazy" decoding="async">
+              </div>
+              <a href="https://randomwordgenerator.com/charades.php" target="_blank"><button class="play-btn">PLAY</button></a>
+            </div>
+          </div>
+        </article>
 
       <article class="card">
           <div class="body">
@@ -1616,6 +1632,7 @@
 
 </body>
 </html>
+
 
 
 
