--- a/game-zone-hh5-6.html
+++ b/game-zone-hh5-6.html
@@ -445,24 +445,24 @@
         </article>
 
 
-
-              <article class="card">
+                              <article class="card">
           <div class="body">
             <div class="text">
-              <h3>Twenty Questions 1</h3>
-              <p>A classic guessing game that builds critical thinking, questioning skills, and vocabulary! Spin to give a student a mystery item or action. The others ask them yes/no questions to figure out what is—within 20 questions. Great for practicing questions, descriptions, and vocabulary!</p>
+              <h3>Mystery Guest</h3>
+              <p>One student pretends to be a celebrity, historical figure, or other known person. Others ask open-ended or closed-ended questions to guess who they are. Great for practicing questions and more!</p>
             </div>
             <div class="art-col">
               <div class="art-frame">
                 <img
-                  src="https://github.com/Outreach360-Inc/games/blob/main/20-questions1-icon.png?raw=true"
-                  alt="Twenty Questions 1 icon"
+                  src="https://github.com/Outreach360-Inc/games/blob/main/mystery-guest-icon.png?raw=true"
+                  alt="Mystery Guest icon"
                   loading="lazy" decoding="async">
               </div>
-              <a href="https://outreach360-inc.github.io/games/20questions1.html" target="_blank"><button class="play-btn">PLAY</button></a>
+              <p style="color: #ff6729;" align="center"><strong>THIS GAME DOES NOT REQUIRE ANY MATERIALS</strong></p>
             </div>
           </div>
         </article>
+
 
       <article class="card">
           <div class="body">
@@ -483,7 +483,26 @@
         </article>
 
             
-    
+
+              <article class="card">
+          <div class="body">
+            <div class="text">
+              <h3>Twenty Questions 1</h3>
+              <p>A classic guessing game that builds critical thinking, questioning skills, and vocabulary! Spin to give a student a mystery item or action. The others ask them yes/no questions to figure out what is—within 20 questions. Great for practicing questions, descriptions, and vocabulary!</p>
+            </div>
+            <div class="art-col">
+              <div class="art-frame">
+                <img
+                  src="https://github.com/Outreach360-Inc/games/blob/main/20-questions1-icon.png?raw=true"
+                  alt="Twenty Questions 1 icon"
+                  loading="lazy" decoding="async">
+              </div>
+              <a href="https://outreach360-inc.github.io/games/20questions1.html" target="_blank"><button class="play-btn">PLAY</button></a>
+            </div>
+          </div>
+        </article>
+
+
 
       <article class="card">
           <div class="body">
@@ -1100,6 +1119,7 @@
 
 </body>
 </html>
+
 
 
 
