--- a/game-zone-hh1-4.html
+++ b/game-zone-hh1-4.html
@@ -572,7 +572,26 @@
             </div>
           </div>
         </article>
-            
+
+
+            <article class="card">
+          <div class="body">
+            <div class="text">
+              <h3>Guess Who / Guess Which</h3>
+              <p><strong>Choose from the boards in Kami</strong> or use the <a href="https://www.canva.com/design/DAGu3dLydxs/wQdx6l2KJMPBIeN4xbvF7A/view?utm_content=DAGu3dLydxs&utm_campaign=designshare&utm_medium=link&utm_source=publishsharelink&mode=preview" target="_blank">Canva template</a> to create a custom board with student photos or images related to your unit. The teacher picks a mystery character or item, and students ask yes/no questions to figure it out. Cross off the options they’ve eliminated. Great for practicing questions, descriptions, and vocabulary!</p>
+            </div>
+            <div class="art-col">
+              <div class="art-frame">
+                <img
+                  src="https://github.com/Outreach360-Inc/games/blob/main/guess-who-icon.png?raw=true"
+                  alt="Guess Who icon"
+                  loading="lazy" decoding="async">
+              </div>
+              <a href="https://kami.app/ca1-LBV-JP4-KMk" target="_blank"><button class="play-btn">PLAY</button></a>
+            </div>
+          </div>
+        </article>
+
             
         <article class="card">
           <div class="body">
@@ -898,6 +917,7 @@
 
 </body>
 </html>
+
 
 
 
