--- a/game-zone-hh1-4.html
+++ b/game-zone-hh1-4.html
@@ -592,6 +592,25 @@
           </div>
         </article>
 
+
+                        <article class="card">
+          <div class="body">
+            <div class="text">
+              <h3>Twenty Questions 1</h3>
+              <p>A classic guessing game that builds critical thinking, questioning skills, and vocabulary! The teacher chooses a mystery word from the current unit or a recent unit. The students ask them yes/no questions to figure out what is—within 20 questions. Great for practicing questions, descriptions, and vocabulary!</p>
+            </div>
+            <div class="art-col">
+              <div class="art-frame">
+                <img
+                  src="https://github.com/Outreach360-Inc/games/blob/main/20-questions1-icon.png?raw=true"
+                  alt="Twenty Questions 1 icon"
+                  loading="lazy" decoding="async">
+              </div>
+  <div>
+            <p style="color: #ff6729;" align="center"><strong>THIS GAME DOES NOT REQUIRE ANY MATERIALS</strong></p>
+            </div>
+          </div>
+        </article>
             
         <article class="card">
           <div class="body">
@@ -917,6 +936,7 @@
 
 </body>
 </html>
+
 
 
 
