--- a/game-zone-discover.html
+++ b/game-zone-discover.html
@@ -460,6 +460,48 @@
             </div>
           </div>
         </article>
+
+            
+                         <article class="card">
+          <div class="body">
+            <div class="text">
+              <h3>Liar</h3>
+              <p>A fast, funny speaking game where each student tells a 30–45 second “true” story with exactly one believable lie hidden inside. The class listens, asks up to two quick questions, then votes true or false. If the liar convinces over half the class, they score; if the class calls it, the class scores. Perfect for practicing persuasive language, tone, and critical listening.</p>
+            </div>
+            <div class="art-col">
+              <div class="art-frame">
+                <img
+                  src="https://github.com/Outreach360-Inc/games/blob/main/liar-icon.png?raw=true"
+                  alt="Liar icon"
+                  loading="lazy" decoding="async">
+              </div>
+              <p style="color: #ff6729;" align="center"><strong>THIS GAME DOES NOT REQUIRE ANY MATERIALS</strong></p>
+            </div>
+          </div>
+        </article>
+
+              <article class="card">
+          <div class="body">
+            <div class="text">
+              <h3>Two Truths and a Lie 2</h3>
+              <p>Share 3 statements—2 true, 1 false—and have students guess the lie. </p>
+              <ul>
+              <li>Create <strong>sets of information and misinformation related to your unit theme.</strong></li> 
+              <li>Or <strong>play the classic get-to-know-you version with personal facts.</strong></li>
+              </ul> 
+              <p>Great for critical thinking, review, and connection!</p>
+            </div>
+            <div class="art-col">
+              <div class="art-frame">
+                <img
+                  src="https://github.com/Outreach360-Inc/games/blob/main/truth-lie2-icon.png?raw=true"
+                  alt="Two Truths and a Lie 2 icon"
+                  loading="lazy" decoding="async">
+              </div>
+              <p style="color: #ff6729;" align="center"><strong>THIS GAME DOES NOT REQUIRE ANY MATERIALS</strong></p>
+            </div>
+          </div>
+        </article>
             
                   <article class="card">
           <div class="body">
@@ -1512,31 +1554,6 @@
       <article class="card">
           <div class="body">
             <div class="text">
-              <h3>Two Truths and a Lie 2</h3>
-              <p>Share 3 statements—2 true, 1 false—and have students guess the lie. </p>
-              <ul>
-              <li>Create <strong>sets of information and misinformation related to your unit theme.</strong></li> 
-              <li>Or <strong>play the classic get-to-know-you version with personal facts.</strong></li>
-              </ul> 
-              <p>Great for critical thinking, review, and connection!</p>
-            </div>
-            <div class="art-col">
-              <div class="art-frame">
-                <img
-                  src="https://github.com/Outreach360-Inc/games/blob/main/truth-lie2-icon.png?raw=true"
-                  alt="Two Truths and a Lie 2 icon"
-                  loading="lazy" decoding="async">
-              </div>
-              <p style="color: #ff6729;" align="center"><strong>THIS GAME DOES NOT REQUIRE ANY MATERIALS</strong></p>
-            </div>
-          </div>
-        </article>
-
-
-
-      <article class="card">
-          <div class="body">
-            <div class="text">
               <h3>Mystery Sound 2</h3>
               <p>Play a sound and have students guess what it is! Use sounds related to your unit. Great for listening, critical thinking, vocabulary recall. and warm-ups!</p>
             </div>
@@ -1632,6 +1649,7 @@
 
 </body>
 </html>
+
 
 
 
