--- a/game-zone-hh5-6.html
+++ b/game-zone-hh5-6.html
@@ -330,6 +330,47 @@
           </div>
         </article>
 
+              <article class="card">
+          <div class="body">
+            <div class="text">
+              <h3>Liar</h3>
+              <p>A fast, funny speaking game where each student tells a 30–45 second “true” story with exactly one believable lie hidden inside. The class listens, asks up to two quick questions, then votes true or false. If the liar convinces over half the class, they score; if the class calls it, the class scores. Perfect for practicing persuasive language, tone, and critical listening.</p>
+            </div>
+            <div class="art-col">
+              <div class="art-frame">
+                <img
+                  src="https://github.com/Outreach360-Inc/games/blob/main/liar-icon.png?raw=true"
+                  alt="Liar icon"
+                  loading="lazy" decoding="async">
+              </div>
+              <p style="color: #ff6729;" align="center"><strong>THIS GAME DOES NOT REQUIRE ANY MATERIALS</strong></p>
+            </div>
+          </div>
+        </article>
+
+                  <article class="card">
+          <div class="body">
+            <div class="text">
+              <h3>Two Truths and a Lie 1</h3>
+              <p>Present 3 simple sentences—2 true, 1 false. Students guess the lie!</p>
+              <ul>
+              <li><strong>Use sentences about familiar topics</strong> (e.g., animals, food, daily routines)</li> 
+              <li>Or <strong>play the classic get-to-know-you version</strong> with personal facts.</li>
+              </ul> 
+              <p>A fun, flexible way to build confidence and language skills!</p>
+            </div>
+            <div class="art-col">
+              <div class="art-frame">
+                <img
+                  src="https://github.com/Outreach360-Inc/games/blob/main/truth-lie1-icon.png?raw=true"
+                  alt="Two Truths and a Lie icon"
+                  loading="lazy" decoding="async">
+              </div>
+              <p style="color: #ff6729;" align="center"><strong>THIS GAME DOES NOT REQUIRE ANY MATERIALS</strong></p>
+            </div>
+          </div>
+        </article>
+
 
             
             
@@ -879,29 +920,6 @@
         </article>
 
 
-      <article class="card">
-          <div class="body">
-            <div class="text">
-              <h3>Two Truths and a Lie 1</h3>
-              <p>Present 3 simple sentences—2 true, 1 false. Students guess the lie!</p>
-              <ul>
-              <li><strong>Use sentences about familiar topics</strong> (e.g., animals, food, daily routines)</li> 
-              <li>Or <strong>play the classic get-to-know-you version</strong> with personal facts.</li>
-              </ul> 
-              <p>A fun, flexible way to build confidence and language skills!</p>
-            </div>
-            <div class="art-col">
-              <div class="art-frame">
-                <img
-                  src="https://github.com/Outreach360-Inc/games/blob/main/truth-lie1-icon.png?raw=true"
-                  alt="Two Truths and a Lie icon"
-                  loading="lazy" decoding="async">
-              </div>
-              <p style="color: #ff6729;" align="center"><strong>THIS GAME DOES NOT REQUIRE ANY MATERIALS</strong></p>
-            </div>
-          </div>
-        </article>
-
         <article class="card">
           <div class="body">
             <div class="text">
@@ -1119,6 +1137,7 @@
 
 </body>
 </html>
+
 
 
 
