--- a/game-zone-hh1-4.html
+++ b/game-zone-hh1-4.html
@@ -216,7 +216,25 @@
             </div>
           </div>
         </article>
-       
+
+                                 <article class="card">
+          <div class="body">
+            <div class="text">
+              <h3>Rhyme Dominoes</h3>
+              <p>Use the Outreach360 Word Board. Deal two random word cards in the center to start two open ends. On each turn, place a card from the palette or a custom card next to a word it rhymes with, then place a random card next to it (since dominoes have 2 sides, but our cards only have 1 word). Play continues until no rhymes can be made or there is no space left on the board. Add optional scoring (e.g. +1 for using the word in a sentence). <strong>For lower levels, take turns as a whole group rather than individually.</strong> Great for phonemic awareness, rhyme families, and vocabulary. </p>
+            </div>
+            <div class="art-col">
+              <div class="art-frame">
+                <img
+                  src="https://github.com/Outreach360-Inc/games/blob/main/rhyme-dominoes-icon.png?raw=true"
+                  alt="Rhyme Dominoes icon"
+                  loading="lazy" decoding="async">
+              </div>
+              <a href="https://outreach360-wordboard.netlify.app" target="_blank"><button class="play-btn">PLAY</button></a>
+            </div>
+          </div>
+        </article>
+            
         <article class="card">
           <div class="body">
             <div class="text">
@@ -936,6 +954,7 @@
 
 </body>
 </html>
+
 
 
 
