--- a/game-zone-discover.html
+++ b/game-zone-discover.html
@@ -197,6 +197,25 @@
           </div>
         </article>
 
+
+              <article class="card">
+          <div class="body">
+            <div class="text">
+              <h3>Rhyme Dominoes</h3>
+              <p>Use the Outreach360 Word Board. Deal two random word cards in the center to start two open ends. On each turn, place a card from the palette or a custom card next to a word it rhymes with, then place a random card next to it (since dominoes have 2 sides, but our cards only have 1 word). Play continues until no rhymes can be made or there is no space left on the board (see <a href="https://github.com/Outreach360-Inc/games/blob/main/rhyme-dominoes-example.jpg?raw=true" target="_blank">example board</a>). Add optional scoring (e.g. +1 for using the word in a sentence). Great for phonemic awareness, rhyme families, and vocabulary. </p>
+            </div>
+            <div class="art-col">
+              <div class="art-frame">
+                <img
+                  src="https://github.com/Outreach360-Inc/games/blob/main/rhyme-dominoes-icon.png?raw=true"
+                  alt="Rhyme Dominoes icon"
+                  loading="lazy" decoding="async">
+              </div>
+              <a href="https://outreach360-wordboard.netlify.app" target="_blank"><button class="play-btn">PLAY</button></a>
+            </div>
+          </div>
+        </article>
+
                  <article class="card">
           <div class="body">
             <div class="text">
@@ -1649,6 +1668,7 @@
 
 </body>
 </html>
+
 
 
 
