--- a/minimal_pairs_tic_tac_toe.html
+++ b/minimal_pairs_tic_tac_toe.html
@@ -3,7 +3,12 @@
 <head>
 <meta charset="utf-8" />
 <meta name="viewport" content="width=device-width, initial-scale=1" />
-<title>Minimal Pairs Tic-Tac-Toe — Modern & Colorful</title>
+<title>Minimal Pairs Tic-Tac-Toe</title>
+  <meta content="noindex, nofollow" name="robots"/>
+<link rel="icon" type="image/png" sizes="32x32"
+      href="https://github.com/Outreach360-Inc/games/raw/main/favicon.png">
+<link rel="icon" type="image/png" sizes="16x16"
+      href="https://github.com/Outreach360-Inc/games/raw/main/favicon.png">
 <style>
   :root {
     --page-bg: radial-gradient(1200px 900px at 10% -10%, #0ea5e9 0%, #8b5cf6 40%, #0b1020 60%);
