--- a/game-zone-hh1-4.html
+++ b/game-zone-hh1-4.html
@@ -331,7 +331,7 @@
           <div class="body">
             <div class="text">
               <h3>Minimal Pairs Tic-Tac Toe</h3>
-              <p>Students play on a 3×3 grid filled with random target pairs (e.g., ship/sheep). To claim a square, the player must pronounce both words correctly.  First player/team to three-in-a-row wins. Great for boosting pronunciation.</p>
+              <p>Students play on a 3×3 grid filled with random target pairs (e.g., ship/sheep). To claim a square, the player must pronounce both words correctly and clearly.  First player/team to three-in-a-row wins. Great for boosting pronunciation.</p>
             </div>
             <div class="art-col">
               <div class="art-frame">
@@ -970,6 +970,7 @@
 
 </body>
 </html>
+
 
 
 
