--- a/game-zone-futures.html
+++ b/game-zone-futures.html
@@ -216,6 +216,24 @@
           </div>
         </article>
 
+             <article class="card">
+          <div class="body">
+            <div class="text">
+              <h3>Minimal Pairs Tic-Tac Toe</h3>
+              <p>Students play on a 3×3 grid filled with random target pairs (e.g., ship/sheep). To claim a square, the player must pronounce both words correctly and clearly.  First player/team to three-in-a-row wins. Great for boosting pronunciation.</p>
+            </div>
+            <div class="art-col">
+              <div class="art-frame">
+                <img
+                  src="https://github.com/Outreach360-Inc/games/blob/main/tic-tac-toe-icon.png?raw=true"
+                  alt="Minimal Pairs Tic-Tac-Toe icon"
+                  loading="lazy" decoding="async">
+              </div>
+              <a href="https://outreach360-inc.github.io/games/minimal-pairs-tic-tac-toe.html" target="_blank"><button class="play-btn">PLAY</button></a>
+            </div>
+          </div>
+        </article>
+            
                  <article class="card">
           <div class="body">
             <div class="text">
@@ -1825,6 +1843,7 @@
 
 </body>
 </html>
+
 
 
 
