--- a/game-zone-futures.html
+++ b/game-zone-futures.html
@@ -233,6 +233,42 @@
             </div>
           </div>
         </article>
+
+                         <article class="card">
+          <div class="body">
+            <div class="text">
+              <h3>Minimal Pairs Spin & Vote</h3>
+              <p>A fast whole-group listening game. Spin a target pair (e.g., 1=ship, 2=sheep) and choose one of the words to say aloud. Students hold up a 1 or a 2 to vote on which word was said. Reveal the answer, have a few students model it, and give correction as needed. <strong>Variation:</strong> Say two words (or the same word twice) and have students vote Same or Different in the chat. Great for sound discrimination and pronunciation. </p>
+            </div>
+            <div class="art-col">
+              <div class="art-frame">
+                <img
+                  src="https://github.com/Outreach360-Inc/games/blob/main/minimal-pairs-spin-vote-icon.png?raw=true"
+                  alt="Minimal Pairs Spin & Vote icon"
+                  loading="lazy" decoding="async">
+              </div>
+              <a href="https://outreach360-inc.github.io/games/minimal-pairs-spinner.html" target="_blank"><button class="play-btn">PLAY</button></a>
+            </div>
+          </div>
+        </article>
+
+                           <article class="card">
+          <div class="body">
+            <div class="text">
+              <h3>Minimal Pairs Volley</h3>
+              <p>A fast pair game. Partner A “serves” one word from a target pair (e.g., ship); Partner B must instantly “volley” the matching counterpart (sheep). Wrong, late, or repeated = point to the other player. Rotate partners after a few rounds. Great for sound discrimination and pronunciation.</p>
+            </div>
+            <div class="art-col">
+              <div class="art-frame">
+                <img
+                  src="https://github.com/Outreach360-Inc/games/blob/main/minimal-pairs-volley-icon.png?raw=true"
+                  alt="Minimal Pairs Volley icon"
+                  loading="lazy" decoding="async">
+              </div>
+              <a href="https://outreach360-inc.github.io/games/minimal-pairs-spinner.html" target="_blank"><button class="play-btn">PLAY</button></a>
+            </div>
+          </div>
+        </article>
             
                  <article class="card">
           <div class="body">
@@ -1843,6 +1879,7 @@
 
 </body>
 </html>
+
 
 
 
