--- a/game-zone-hh1-4.html
+++ b/game-zone-hh1-4.html
@@ -383,6 +383,25 @@
           </div>
         </article>
 
+
+                           <article class="card">
+          <div class="body">
+            <div class="text">
+              <h3>The Tongue Twister Game</h3>
+              <p>Choose a tongue twister and roll the virtual die. Assign each number a style (e.g., 1=whisper, 2=robot, 3=angry, 4=happy, 5=one breath, 6=double speed). Call a few students per roll. Great for pronunciation.</p>
+            </div>
+            <div class="art-col">
+              <div class="art-frame">
+                <img
+                  src="https://github.com/Outreach360-Inc/games/blob/main/tongue-twister-game-icon.png?raw=true"
+                  alt="The Tongue Twister Game icon"
+                  loading="lazy" decoding="async">
+              </div>
+              <a href="https://freeonlinedice.com" target="_blank"><button class="play-btn">PLAY</button></a>
+            </div>
+          </div>
+        </article>
+
                     <article class="card">
           <div class="body">
             <div class="text">
@@ -1008,6 +1027,7 @@
 
 </body>
 </html>
+
 
 
 
