--- a/game-zone-hh1-4.html
+++ b/game-zone-hh1-4.html
@@ -388,7 +388,7 @@
           <div class="body">
             <div class="text">
               <h3>The Tongue Twister Game</h3>
-              <p>Choose a tongue twister and roll the virtual die. Assign each number a style (e.g., 1=whisper, 2=robot, 3=angry, 4=happy, 5=one breath, 6=double speed). Call a few students per roll. Great for pronunciation.</p>
+              <p>Choose a tongue twister and <a href="https://freeonlinedice.com" target="_blank">roll a virtual die</a>. Assign each number a style (e.g., 1=whisper, 2=robot, 3=angry, 4=happy, 5=one breath, 6=double speed). Call a few students per roll. Great for pronunciation.</p>
             </div>
             <div class="art-col">
               <div class="art-frame">
@@ -397,7 +397,7 @@
                   alt="The Tongue Twister Game icon"
                   loading="lazy" decoding="async">
               </div>
-              <a href="https://freeonlinedice.com" target="_blank"><button class="play-btn">PLAY</button></a>
+                             <p style="color: #ff6729;" align="center"><strong>YOU WILL NEED TO FIND YOUR OWN MATERIALS</strong></p>
             </div>
           </div>
         </article>
@@ -1027,6 +1027,7 @@
 
 </body>
 </html>
+
 
 
 
