--- a/game-zone-futures.html
+++ b/game-zone-futures.html
@@ -270,6 +270,24 @@
             </div>
           </div>
         </article>
+
+                          <article class="card">
+          <div class="body">
+            <div class="text">
+              <h3>The Tongue Twister Game</h3>
+              <p>Choose a tongue twister and <a href="https://freeonlinedice.com" target="_blank">roll a virtual die</a>. Assign each number a style (e.g., 1=whisper, 2=robot, 3=angry, 4=happy, 5=one breath, 6=double speed). Call a few students per roll. Great for pronunciation.</p>
+            </div>
+            <div class="art-col">
+              <div class="art-frame">
+                <img
+                  src="https://github.com/Outreach360-Inc/games/blob/main/tongue-twister-game-icon.png?raw=true"
+                  alt="The Tongue Twister Game icon"
+                  loading="lazy" decoding="async">
+              </div>
+                             <p style="color: #ff6729;" align="center"><strong>YOU WILL NEED TO FIND YOUR OWN MATERIALS</strong></p>
+            </div>
+          </div>
+        </article>
             
                  <article class="card">
           <div class="body">
@@ -1880,6 +1898,7 @@
 
 </body>
 </html>
+
 
 
 
