--- a/game-zone-hh1-4.html
+++ b/game-zone-hh1-4.html
@@ -669,7 +669,7 @@
           <div class="body">
             <div class="text">
               <h3>Guess Who / Guess Which</h3>
-              <p><strong>Choose from the boards in Kami</strong> or use the <a href="https://www.canva.com/design/DAGu3dLydxs/wQdx6l2KJMPBIeN4xbvF7A/view?utm_content=DAGu3dLydxs&utm_campaign=designshare&utm_medium=link&utm_source=publishsharelink&mode=preview" target="_blank">Canva template</a> to create a custom board with student photos or images related to your unit. The teacher picks a mystery character or item, and students ask yes/no questions to figure it out. Cross off the options they’ve eliminated. Great for practicing questions, descriptions, and vocabulary!</p>
+              <p><strong>Choose from the boards in Kami</strong> or use the <a href="https://www.canva.com/design/DAGu3dLydxs/wQdx6l2KJMPBIeN4xbvF7A/view?utm_content=DAGu3dLydxs&utm_campaign=designshare&utm_medium=link&utm_source=publishsharelink&mode=preview" target="_blank">Canva template</a> to create a custom board with student photos or images related to your unit. The teacher picks a mystery character or item, and students ask yes/no questions to figure it out. Cross off the options they’ve eliminated. Great for practicing questions, descriptions, and vocabulary! <strong>Best suited for Hand in Hand 4.</strong></p>
             </div>
             <div class="art-col">
               <div class="art-frame">
@@ -1027,6 +1027,7 @@
 
 </body>
 </html>
+
 
 
 
