--- a/game-zone-discover.html
+++ b/game-zone-discover.html
@@ -380,6 +380,25 @@
             </div>
           </div>
         </article>
+
+                   <article class="card">
+          <div class="body">
+            <div class="text">
+              <h3>Who Wants to Be a Millionaire? – Vocabulary Edition 1</h3>
+              <p>A quiz game that makes word learning exciting. Play with the <strong>Oxford 3000 </strong> (the most important high-frequency English words for learners).  <strong>Use V1 for Oxford Discover 1-2</strong> and <strong>V2 for Oxford Discover 3 or higher.</strong> Students play as one team, but the teacher calls on students in rotation to answer. To keep it fun, each member of the team may use each lifeline—phone a friend or poll the class—once per game for help.</p>
+            </div>
+            <div class="art-col">
+              <div class="art-frame">
+                <img
+                  src="https://github.com/Outreach360-Inc/games/blob/main/millionaire-vocab-icon.png?raw=true"
+                  alt="Who Wants to Be a Millionaire? – Vocabulary Edition 1 icon"
+                  loading="lazy" decoding="async">
+              </div>
+              <a href="https://outreach360-inc.github.io/games/millionaire-vocab1.html" target="_blank"><button class="play-btn">PLAY</button></a>
+            </div>
+          </div>
+        </article>
+
             
         <article class="card">
           <div class="body">
@@ -1740,6 +1759,7 @@
 
 </body>
 </html>
+
 
 
 
