--- a/game-zone-discover.html
+++ b/game-zone-discover.html
@@ -385,7 +385,7 @@
           <div class="body">
             <div class="text">
               <h3>Who Wants to Be a Millionaire? – Vocabulary Edition 1</h3>
-              <p>A quiz game that makes word learning exciting. Play with the <strong>Oxford 3000 </strong> (the most important high-frequency English words for learners).  <strong>Use V1 for Oxford Discover 1-2</strong> and <strong>V2 for Oxford Discover 3 or higher.</strong> Students play as one team, but the teacher calls on students in rotation to answer. To keep it fun, each member of the team may use each lifeline—phone a friend or poll the class—once per game for help.</p>
+              <p>A quiz game that makes word learning exciting. Play with the <strong>Oxford 3000 </strong> (the most important high-frequency English words for learners).  <strong>Use V1 for Oxford Discover 1-2</strong> and <strong>V2 for Oxford Discover 3 or higher</strong>. Students play as one team, but the teacher calls on students in rotation to answer. To keep it fun, each member of the team may use each lifeline—phone a friend or poll the class—once per game for help.</p>
             </div>
             <div class="art-col">
               <div class="art-frame">
@@ -1759,6 +1759,7 @@
 
 </body>
 </html>
+
 
 
 
