Update and rename millionaire-vocab.html to millionaire-vocab2.html

--- a/millionaire-vocab2.html
+++ b/millionaire-vocab2.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <title>Who Wants to Be a Millionaire? – Vocabulary Edition</title>
+  <title>Who Wants to Be a Millionaire? – Vocabulary Edition 2</title>
 <meta content="noindex, nofollow" name="robots"/>
 <link rel="icon" type="image/png" sizes="32x32"
       href="https://github.com/Outreach360-Inc/games/raw/main/favicon.png">
@@ -672,7 +672,7 @@
       <div class="header-inner">
         <div class="header-text">
           <div>
-            <div class="title">Who Wants to Be a Millionaire? – <span style="color:var(--accent)">Vocabulary Edition</span></div>
+            <div class="title">Who Wants to Be a Millionaire? – <span style="color:var(--accent)">Vocabulary Edition 2</span></div>
             <div class="subtitle">Use the embedded Oxford 5000 spinner to get a word. Then draw a prompt card here.</div>
           </div>
         </div>
