--- a/game-zone-futures.html
+++ b/game-zone-futures.html
@@ -311,17 +311,17 @@
                  <article class="card">
           <div class="body">
             <div class="text">
-              <h3>Who Wants to Be a Millionaire? – Vocabulary Edition</h3>
+              <h3>Who Wants to Be a Millionaire? – Vocabulary Edition 2</h3>
               <p>A quiz game that makes word learning exciting. Play with the <strong>Oxford 5000</strong> (the most important high-frequency English words for learners) or the <strong>Academic Word List</strong> (the most frequent words in academic texts). Students play as one team, but the teacher calls on students in rotation to answer. To keep it fun, each member of the team may use each lifeline—phone a friend or poll the class—once per game for help.</p>
             </div>
             <div class="art-col">
               <div class="art-frame">
                 <img
                   src="https://github.com/Outreach360-Inc/games/blob/main/millionaire-vocab-icon.png?raw=true"
-                  alt="Who Wants to Be a Millionaire? – Vocabulary Edition icon"
+                  alt="Who Wants to Be a Millionaire? – Vocabulary Edition 2 icon"
                   loading="lazy" decoding="async">
               </div>
-              <a href="https://outreach360-inc.github.io/games/millionaire-vocab.html" target="_blank"><button class="play-btn">PLAY</button></a>
+              <a href="https://outreach360-inc.github.io/games/millionaire-vocab2.html" target="_blank"><button class="play-btn">PLAY</button></a>
             </div>
           </div>
         </article>
@@ -1898,6 +1898,7 @@
 
 </body>
 </html>
+
 
 
 
