--- a/game-zone-futures.html
+++ b/game-zone-futures.html
@@ -288,6 +288,24 @@
             </div>
           </div>
         </article>
+
+            <article class="card">
+          <div class="body">
+            <div class="text">
+              <h3>Jeopardy – Grammar Edition</h3>
+              <p>Students compete in a game-show style quiz focused on tenses, adjectives, adverbs, prepositions, articles, quantifiers, and conjunctions. Teams choose questions by point value and race for the highest score. <strong>Some questions have more than 1 correct answer</strong>, but only one example answer was provided. Use your best judgement when awarding points. <strong>With 1000+ prompts per category appearing at random, the game stays fresh and can be played again and again.</strong> A lively way to practice grammar. <strong>Suitable for all levels; however, lower-level learners won’t know every tense or concept and might need additional support.</strong>.</p>
+            </div>
+            <div class="art-col">
+              <div class="art-frame">
+                <img
+                  src="https://github.com/Outreach360-Inc/games/blob/main/jeopardy-icon1.png?raw=true"
+                  alt="Jeopardy – Grammar Edition icon"
+                  loading="lazy" decoding="async">
+              </div>
+              <a href="https://outreach360-inc.github.io/games/jeopardy-grammar.html" target="_blank"><button class="play-btn">PLAY</button></a>
+            </div>
+          </div>
+        </article>
             
                  <article class="card">
           <div class="body">
@@ -1898,6 +1916,7 @@
 
 </body>
 </html>
+
 
 
 
