--- a/game-zone-discover.html
+++ b/game-zone-discover.html
@@ -403,7 +403,7 @@
           <div class="body">
             <div class="text">
               <h3>Jeopardy – Grammar Edition</h3>
-              <p>Students compete in a game-show style quiz focused on tenses, adjectives, adverbs, prepositions, articles, quantifiers, and conjunctions. Teams choose questions by point value and race for the highest score. <strong>Some questions have more than 1 correct answer</strong>, but only one example answer was provided. Use your best judgement when awarding points. <strong>With 1000+ prompts per category appearing at random, the game stays fresh and can be played again and again.</strong> A lively way to practice grammar. <strong>Suitable for all levels; however, lower-level learners won’t know every tense or concept and might need additional support.</strong>.</p>
+              <p>Students compete in a game-show style quiz focused on tenses, adjectives, adverbs, prepositions, articles, quantifiers, and conjunctions. Teams choose questions by point value and race for the highest score. <strong>Some questions have more than 1 correct answer</strong>, but only one example answer was provided. Use your best judgement when awarding points. <strong>With 1000+ prompts per category appearing at random, the game stays fresh and can be played again and again.</strong> A lively way to practice grammar. <strong>Best suited for Oxford Discover 3 or higher; however, learners might not be familiar with every tense or concept yet.</strong>.</p>
             </div>
             <div class="art-col">
               <div class="art-frame">
@@ -1777,6 +1777,7 @@
 
 </body>
 </html>
+
 
 
 
