--- a/game-zone-futures.html
+++ b/game-zone-futures.html
@@ -420,6 +420,42 @@
           </div>
         </article>
 
+               <article class="card">
+          <div class="body">
+            <div class="text">
+              <h3>Beat the Clock — Future Edition</h3>
+              <p>Spin for an action/event, a time phrase, and a <a href="http://outreach360-inc.github.io/games/beat-clock-future.pdf" target="_blank">future tense (in the past, simple, continuous, perfect, or perfect continuous)</a>. Students write as many <strong>affirmative, negative, or interrogative sentences</strong> as possible before time runs out. They can <strong>adjust the action or time phrase</strong> to make the sentence natural and <strong>add details</strong> to keep each one unique. <strong>Award points</strong> for each correct sentence. For a twist, add extra time for <strong>short stories, dialogues, or news reports</strong>, or <strong>hide a spinner</strong> and let students choose one element themselves. Great for building speed, accuracy, and confidence with future tenses.</p>
+            </div>
+            <div class="art-col">
+              <div class="art-frame">
+                <img
+                  src="https://github.com/Outreach360-Inc/games/blob/main/beat-clock-icon.png?raw=true"
+                  alt="Beat the Clock — Future Edition icon"
+                  loading="lazy" decoding="async">
+              </div>
+                <a href="http://outreach360-inc.github.io/games/beat-clock-future.html" target="_blank"><button class="play-btn">PLAY</button></a>
+            </div>
+          </div>
+        </article>
+
+                <article class="card">
+          <div class="body">
+            <div class="text">
+              <h3>Beat the Clock</h3>
+              <p>The teacher gives a topic, word, or grammar focus. Students race against a timer to write as many correct sentences as they can before time runs out. Award points for each correct sentence. Great for reviewing vocabulary, grammar, and writing under pressure.</p>
+            </div>
+            <div class="art-col">
+              <div class="art-frame">
+                <img
+                  src="https://github.com/Outreach360-Inc/games/blob/main/beat-clock-icon.png?raw=true"
+                  alt="Beat the Clock icon"
+                  loading="lazy" decoding="async">
+              </div>
+                <p style="color: #ff6729;" align="center"><strong>THIS GAME DOES NOT REQUIRE ANY MATERIALS</strong></p>
+            </div>
+          </div>
+        </article>
+
 
                                                     <article class="card">
           <div class="body">
@@ -613,23 +649,6 @@
         </article>
 
 
-                  <article class="card">
-          <div class="body">
-            <div class="text">
-              <h3>Beat the Clock — Future Edition</h3>
-              <p>Spin for an action/event, a time phrase, and a <a href="http://outreach360-inc.github.io/games/beat-clock-future.pdf" target="_blank">future tense (in the past, simple, continuous, perfect, or perfect continuous)</a>. Students write as many <strong>affirmative, negative, or interrogative sentences</strong> as possible before time runs out. They can <strong>adjust the action or time phrase</strong> to make the sentence natural and <strong>add details</strong> to keep each one unique. <strong>Award points</strong> for each correct sentence. For a twist, add extra time for <strong>short stories, dialogues, or news reports</strong>, or <strong>hide a spinner</strong> and let students choose one element themselves. Great for building speed, accuracy, and confidence with future tenses.</p>
-            </div>
-            <div class="art-col">
-              <div class="art-frame">
-                <img
-                  src="https://github.com/Outreach360-Inc/games/blob/main/beat-clock-icon.png?raw=true"
-                  alt="Beat the Clock — Future Edition icon"
-                  loading="lazy" decoding="async">
-              </div>
-                <a href="http://outreach360-inc.github.io/games/beat-clock-future.html" target="_blank"><button class="play-btn">PLAY</button></a>
-            </div>
-          </div>
-        </article>
 
                   <article class="card">
           <div class="body">
@@ -1916,6 +1935,7 @@
 
 </body>
 </html>
+
 
 
 
