--- a/game-zone-futures.html
+++ b/game-zone-futures.html
@@ -1464,6 +1464,23 @@
           </div>
         </article>
 
+              <article class="card">
+          <div class="body">
+            <div class="text">
+              <h3>Chain Reaction</h3>
+              <p>A fast-paced vocab where the group builds a chain of two-word phrases (e.g., reading list → list price → price tag → tag line → line graph). Players go in order, adding links to the chain until someone is stumped. Great for vocabulary recall.</p>
+            </div>
+            <div class="art-col">
+              <div class="art-frame">
+                <img
+                  src="https://github.com/Outreach360-Inc/games/blob/main/chain-reaction-icon.png?raw=true"
+                  alt="Chain Reaction icon"
+                  loading="lazy" decoding="async">
+              </div>
+             <p style="color: #ff6729;" align="center"><strong>THIS GAME DOES NOT REQUIRE ANY MATERIALS</strong></p>
+            </div>
+          </div>
+        </article>
                   <article class="card">
           <div class="body">
             <div class="text">
@@ -1935,6 +1952,7 @@
 
 </body>
 </html>
+
 
 
 
