--- a/game-zone-hh5-6.html
+++ b/game-zone-hh5-6.html
@@ -633,6 +633,25 @@
         </article>
 
 
+                  <article class="card">
+          <div class="body">
+            <div class="text">
+              <h3>Glug</h3>
+              <p>A funny yes/no game: one student secretly chooses a verb, and everyone else tries to guess it by asking questions with the invented verb “glug” (e.g., “Have you ever glugged?”, “Are you glugging now?”). Great for question practice with multiple tenses.</p>
+            </div>
+            <div class="art-col">
+              <div class="art-frame">
+                <img
+                  src="https://github.com/Outreach360-Inc/games/blob/main/glug-icon.png?raw=true"
+                  alt="Glug icon"
+                  loading="lazy" decoding="async">
+              </div>
+               <p style="color: #ff6729;" align="center"><strong>THIS GAME DOES NOT REQUIRE ANY MATERIALS</strong></p>
+            </div>
+          </div>
+        </article>
+
+
 
       <article class="card">
           <div class="body">
@@ -1226,6 +1245,7 @@
 
 </body>
 </html>
+
 
 
 
