--- a/game-zone-futures.html
+++ b/game-zone-futures.html
@@ -1331,6 +1331,24 @@
           </div>
         </article>
 
+                              <article class="card">
+          <div class="body">
+            <div class="text">
+              <h3>Password</h3>
+              <p>Send one student the secret “password” (e.g., flower) in the chat. They give a single associated clue word to the rest of the class. The class confers and guesses the password; if they miss, the clue-giver offers another one-word hint until someone gets it. Great for vocabulary.</p>
+            </div>
+            <div class="art-col">
+              <div class="art-frame">
+                <img
+                  src="https://github.com/Outreach360-Inc/games/blob/main/password-icon.png?raw=true"
+                  alt="Password icon"
+                  loading="lazy" decoding="async">
+              </div>
+               <p style="color: #ff6729;" align="center"><strong>THIS GAME DOES NOT REQUIRE ANY MATERIALS</strong></p>
+            </div>
+          </div>
+        </article>
+
 
       <article class="card">
           <div class="body">
@@ -1990,6 +2008,7 @@
 
 </body>
 </html>
+
 
 
 
