--- a/game-zone-discover.html
+++ b/game-zone-discover.html
@@ -1047,6 +1047,25 @@
           </div>
         </article>
 
+            <article class="card">
+          <div class="body">
+            <div class="text">
+              <h3>Password</h3>
+              <p>Use the word generator to get a secret "password" (e.g., flower) and send it to one student in the chat. They give a single associated clue word to the rest of the class. The class confers and guesses the password; if they miss, the clue-giver offers another one-word hint until someone gets it. Great for vocabulary.</p>
+            </div>
+            <div class="art-col">
+              <div class="art-frame">
+                <img
+                  src="https://github.com/Outreach360-Inc/games/blob/main/password-icon.png?raw=true"
+                  alt="Password icon"
+                  loading="lazy" decoding="async">
+              </div>
+               <a href="https://randomwordgenerator.com/charades.php" target="_blank"><button class="play-btn">PLAY</button></a>
+            </div>
+          </div>
+        </article>
+
+
 
       <article class="card">
           <div class="body">
@@ -1814,6 +1833,7 @@
 
 </body>
 </html>
+
 
 
 
