--- a/game-zone-futures.html
+++ b/game-zone-futures.html
@@ -1335,7 +1335,7 @@
           <div class="body">
             <div class="text">
               <h3>Password</h3>
-              <p>Use the word generator to get a secret "password" (e.g., flower) and send it to one student in the chat. They give a single associated clue word to the rest of the class. The class confers and guesses the password; if they miss, the clue-giver offers another one-word hint until someone gets it. Great for vocabulary.</p>
+              <p>Use the word generator to get a secret "password" (e.g., flower) and send it to one student in the chat. They give a single associated clue word to the rest of the class. The class confers and guesses the password; if they miss, the clue-giver offers another one-word hint until someone gets it. <strong>Adjust the level of the words as appropriate.</strong> Great for vocabulary.</p>
             </div>
             <div class="art-col">
               <div class="art-frame">
@@ -2008,6 +2008,7 @@
 
 </body>
 </html>
+
 
 
 
