--- a/game-zone-hh1-4.html
+++ b/game-zone-hh1-4.html
@@ -482,7 +482,7 @@
           <div class="body">
             <div class="text">
               <h3>A Terrible Day</h3>
-              <p>A board game to practice the <strong>simple past—both regular and irregular verbs</strong>. Each space on the board comes with a randomized prompt. The game is loaded with hundreds of possible prompts, so it can be played more than once. Great for grammar practice and introducing new verbs. <strong>Best suited for Hand in Hand 4.</strong></p>
+              <p>A board game to practice the <strong>simple past—both regular and irregular verbs</strong>. Each space on the board comes with a randomized prompt. The game is loaded with hundreds of possible prompts, so it can be played more than once. Great for grammar practice and introducing new verbs. <strong>Best suited for after Hand in Hand 4, Unit 6, when simple past irregular verbs are introduced.</strong></p>
             </div>
             <div class="art-col">
               <div class="art-frame">
@@ -1043,6 +1043,7 @@
 
 </body>
 </html>
+
 
 
 
