--- a/game-zone-discover.html
+++ b/game-zone-discover.html
@@ -1349,7 +1349,24 @@
           </div>
         </article>
 
-
+       <article class="card">
+          <div class="body">
+            <div class="text">
+              <h3>A Terrible Day</h3>
+              <p>A board game to practice the <strong>simple past—both regular and irregular verbs</strong>. Each space on the board comes with a randomized prompt. The game is loaded with hundreds of possible prompts, so it can be played more than once. Great for grammar practice and introducing new verbs. <strong>Best suited for after Hand in Hand 4, Unit 6, when simple past irregular verbs are introduced.</strong></p>
+            </div>
+            <div class="art-col">
+              <div class="art-frame">
+                <img
+                  src="https://github.com/Outreach360-Inc/games/blob/main/terrible-day-icon.png?raw=true"
+                  alt="A Terrible Day icon"
+                  loading="lazy" decoding="async">
+              </div>
+              <a href="https://outreach360-inc.github.io/games/a-terrible-day.html" target="_blank"><button class="play-btn">PLAY</button></a>
+            </div>
+          </div>
+        </article>            
+            
       <article class="card">
           <div class="body">
             <div class="text">
@@ -1833,6 +1850,7 @@
 
 </body>
 </html>
+
 
 
 
