--- a/game-zone-discover.html
+++ b/game-zone-discover.html
@@ -1353,7 +1353,7 @@
           <div class="body">
             <div class="text">
               <h3>A Terrible Day</h3>
-              <p>A board game to practice the <strong>simple past—both regular and irregular verbs</strong>. Each space on the board comes with a randomized prompt. The game is loaded with hundreds of possible prompts, so it can be played more than once. Great for grammar practice and introducing new verbs. <strong>Best suited for after Hand in Hand 4, Unit 6, when simple past irregular verbs are introduced.</strong></p>
+              <p>A board game to practice the <strong>simple past—both regular and irregular verbs</strong>. Each space on the board comes with a randomized prompt. The game is loaded with hundreds of possible prompts, so it can be played more than once. Great for grammar practice and introducing new verbs.</p>
             </div>
             <div class="art-col">
               <div class="art-frame">
@@ -1850,6 +1850,7 @@
 
 </body>
 </html>
+
 
 
 
