--- a/game-zone-futures.html
+++ b/game-zone-futures.html
@@ -1636,7 +1636,7 @@
           <div class="body">
             <div class="text">
               <h3>Think of a Word</h3>
-              <p>Share your screen with the prompts. Write a noun at the top (e.g., “piano”). Everyone works solo to complete all eight; the first finisher calls “done,” you check, and award a point. Use nouns from your unit or a <a href="https://randomwordgenerator.com/pictionary.php" target="_blank">word generator</a>. <strong>Use nouns with at least 4 letters</strong>. Great for vocabulary recall.</p>
+              <p>Share your screen with the prompts. Write a noun at the top (e.g., “piano”). Everyone works solo to complete all eight; the first finisher calls “done,” you check, and award a point. Play as many rounds as you'd like. Use nouns from your unit or a <a href="https://randomwordgenerator.com/pictionary.php" target="_blank">word generator</a>. <strong>Use nouns with at least 4 letters</strong>. Great for vocabulary recall.</p>
             </div>
             <div class="art-col">
               <div class="art-frame">
@@ -2027,6 +2027,7 @@
 
 </body>
 </html>
+
 
 
 
