--- a/game-zone-discover.html
+++ b/game-zone-discover.html
@@ -1288,6 +1288,25 @@
           </div>
         </article>
 
+               <article class="card">
+          <div class="body">
+            <div class="text">
+              <h3>Alphabet Madness</h3>
+              <p>Project a single letter (e.g., M). Each student works solo to write a fully grammatical sentence using only words that start with that letter (e.g., “My mother makes my morning meal”). Set a timer for each round (e.g., 1-2 minutes); award 1 point per word for correct sentences. Play several letters—the highest total wins. Great for fast-paced writing practice and vocabuary recall.</p>
+            </div>
+            <div class="art-col">
+              <div class="art-frame">
+                <img
+                  src="https://github.com/Outreach360-Inc/games/blob/main/alphabet-madness-icon.png?raw=true"
+                  alt="Alphabet Madness icon"
+                  loading="lazy" decoding="async">
+              </div>
+             <p style="color: #ff6729;" align="center"><strong>THIS GAME DOES NOT REQUIRE ANY MATERIALS</strong></p>
+            </div>
+          </div>
+        </article>
+
+
     <article class="card">
           <div class="body">
             <div class="text">
@@ -1866,6 +1885,7 @@
 
 </body>
 </html>
+
 
 
 
