--- a/game-zone-hh5-6.html
+++ b/game-zone-hh5-6.html
@@ -651,6 +651,24 @@
           </div>
         </article>
 
+                                  <article class="card">
+          <div class="body">
+            <div class="text">
+              <h3>Rock, Paper, Scissors – Question Edition</h3>
+              <p>Select 2 students. Have them throw rock-paper-scissors to decide roles. The winner asks one correct question using your target language (e.g., past simple, WH-questions). The other student answers in a full sentence. Each correct question/answer earns a point. Play several rapid rounds, then rotate partners. Great for question formation.</p>
+            </div>
+            <div class="art-col">
+              <div class="art-frame">
+                <img
+                  src="https://github.com/Outreach360-Inc/games/blob/main/rock-paper-scissors-icon.png?raw=true"
+                  alt="Rock, Paper, Scissors – Question Edition icon"
+                  loading="lazy" decoding="async">
+              </div>
+                <p style="color: #ff6729;" align="center"><strong>THIS GAME DOES NOT REQUIRE ANY MATERIALS</strong></p>
+            </div>
+          </div>
+        </article>             
+
 
 
       <article class="card">
@@ -1004,7 +1022,7 @@
             </div>
           </div>
         </article>
-            
+
         <article class="card">
           <div class="body">
             <div class="text">
@@ -1298,6 +1316,7 @@
 
 </body>
 </html>
+
 
 
 
